# bank-fintech-API

./: .gitignore  README.md  main.py  pyproject.toml
.envs/: .env.example
config/: settings.py
config/settings/: base.py  local.py
core_apps/common/: apps.py
core_apps/user_auth/: apps.py
core_apps/user_profile/: apps.py
requirements/: base.txt
