[project]
name = "bank-fintech-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi==23.1.0",
    "black>=24.8.0",
    "cloudinary==1.39.1",
    "django==4.2.15",
    "django-celery-beat==2.6.0",
    "django-celery-email==3.0.0",
    "django-countries==7.6.1",
    "django-filter==24.3",
    "django-phonenumber-field==8.0.0",
    "djangorestframework==3.15.2",
    "djoser==2.2.3",
    "drf-spectacular==0.27.2",
    "phonenumbers==8.13.42",
    "pillow==10.4.0",
    "psycopg2-binary==2.9.9",
    "python-dateutil==2.9.0",
    "python-dotenv==1.0.1",
]

[dependency-groups]
dev = [
    "black==24.8.0",
    "watchfiles==0.22.0",
]
